# MLOps_Project

./: .gitignore  .pre-commit-config.yaml  Dockerfile.app  README.md  environment.yml  pyproject.toml  requirements.in  requirements.txt  ruff.toml
.github/workflows/: ci.yaml
src/modelling/: deployment.py  main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py
src/web_service/lib/: inference.py  models.py  preprocessing.py  utils.py
